--- a/dpc-web/app/assets/stylesheets/settings/_variables.scss
+++ b/dpc-web/app/assets/stylesheets/settings/_variables.scss
@@ -4,6 +4,8 @@ $color-warn-alt-light: rgba($color-warn-lightest, .9);
 $color-primary-alt-dark: #004972;
 $color-gray-ultra-light: #f6f6f6;
 $color-success-alt-lightest: rgba($color-success-lightest, .9);
+$color-code-bg: rgba(#fad97f, .35);
+$color-code-words: #112e51;
 
 // Focus
 $focus-outline:  5px solid $color-gold-light;
