--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -37,6 +37,7 @@
  @import "components/footer";
  @import "components/hero";
  @import "components/icons";
+ @import "components/imgs";
  @import "components/left-nav";
  @import "components/modals";
  @import "components/module-containers";
