--- a/dpc-web/app/views/public_keys/new.html.erb
+++ b/dpc-web/app/views/public_keys/new.html.erb
@@ -32,7 +32,7 @@
       <% end %>
     </div>
     <div class="box__content box--flex">
-      <p class="ds-text--lead">Copy the whole public key including the <code class="code-inline">BEGIN PUBLIC KEY</code> and <code class="code-inline">END PUBLIC KEY</code> tags before and after.</p>
+      <p class="ds-text--lead">Copy the whole public key including the <code class="ds-u-fill--warn-lightest ds-u-color--primary-darkest">BEGIN PUBLIC KEY</code> and <code class="ds-u-fill--warn-lightest ds-u-color--primary-darkest">END PUBLIC KEY</code> tags before and after.</p>
       <p><strong>Example:</strong></p>
       <%= image_tag("public_key.svg", class: "img--outline", alt: "") %>
     </div>
