--- a/dpc-web/app/views/internal/registered_organizations/new.html.erb
+++ b/dpc-web/app/views/internal/registered_organizations/new.html.erb
@@ -5,7 +5,7 @@
   <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
 
     <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0" data-test="new-org-page">
-      Enable <%= @registered_organization.api_env.capitalize %> API access for <%= @organization.name %>
+      Enable <%= @api_env.capitalize %> API access for <%= @organization.name %>
     </h1>
 
   </section>
