Already have access? - added

--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,8 @@
 
         <h1 class="ds-u-margin-top--0">Request access</h1>
 
+        <p class="ds-u-color--error-dark">* - required fields</p>
+
         <div class="field">
           <%= f.label :first_name, class: "ds-c-label" %>
           <%= f.text_field :first_name, class: "ds-c-field" %>
