--- a/dpc-web/app/views/devise/shared/_links.html.erb
+++ b/dpc-web/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <p class="ds-u-margin-y--0">Already have an account?
+  <p class="ds-u-margin-y--0">Already have access?
   <%= link_to "Log in", new_session_path(resource_name) %></p>
 <% end %>
 
