text correction on user edit

--- a/dpc-web/app/views/dashboard/show.html.erb
+++ b/dpc-web/app/views/dashboard/show.html.erb
@@ -30,7 +30,7 @@
       <div class="box box--inverse">
       <div class="box__content">
       <h3 class="ds-u-margin-top--0">Ask your software vendors to work with you</h3>
-      <p>Tell your software vendors to read the developer documentation so that they can support you in the pilot</p>
+      <p>Tell your software vendors to read the developer documentation so that they can support you in the pilot.</p>
       <p class="ds-u-margin-top--3 ds-u-margin-bottom--0"><%= link_to "API documentation", docs_path, :class => "ds-c-button ds-c-button--primary" %></p>
       </div>
       </div>
