--- a/dpc-web/app/views/organizations/edit.html.erb
+++ b/dpc-web/app/views/organizations/edit.html.erb
@@ -13,7 +13,7 @@
       <%= form_for @organization, url: organization_path(@organization), html: { method: :put } do |f| %>
         <div class="field">
           <%= f.label :npi, "NPI", class: "ds-c-label" %>
-          <span class="ds-c-field__hint ds-u-measure--wide">Enter the organizational NPI that you want to use for synthetic (test data) sandbox testing. This can be any of your organizational NPIs at this point for testing, You will have a chance to modify this before moving to production access.</span>
+          <span class="ds-c-field__hint ds-u-measure--wide">Enter the organizational NPI that you want to use for synthetic (test data) sandbox testing. This can be any of your organizational NPIs at this point for testing and you will have a chance to modify this before moving to production access.</span>
           <%= f.text_field :npi, class: "ds-c-field ds-c-field--medium", maxlength: "10" %>
         </div>
 
