form required congfigured

--- a/dpc-web/app/assets/stylesheets/components/_fields.scss
+++ b/dpc-web/app/assets/stylesheets/components/_fields.scss
@@ -3,3 +3,13 @@
   margin-left: $spacer-2;
   padding: 0 0 $spacer-1 $spacer-3;
 }
+
+.required {
+  display: flex;
+  flex-wrap: nowrap;
+
+  .ast {
+    color: $color-error-dark;
+    margin-top: 24px;
+  }
+}
