--- a/dpc-web/app/assets/stylesheets/utilities/_add-ons.scss
+++ b/dpc-web/app/assets/stylesheets/utilities/_add-ons.scss
@@ -1,3 +1,7 @@
+.ast {
+  color: $color-error-dark;
+}
+
 .ds-u-max-width--none {
   max-width: none !important;
 }
@@ -8,4 +12,5 @@
 
 .ds-u-color--gray-light {
   color: $color-gray-light;
+  margin: 0 0;
 }
