all asterisks complete

--- a/dpc-web/app/assets/stylesheets/components/_fields.scss
+++ b/dpc-web/app/assets/stylesheets/components/_fields.scss
@@ -8,7 +8,12 @@
   display: flex;
   flex-wrap: nowrap;
 
-  .ast {
+  .ast-inline {
+    color: $color-error-dark;
+  }
+
+  .ast-label {
+    color: $color-error-dark;
     margin-top: 24px;
   }
 }
