DPC-904 - Update website text to include instructions re: public keys (#559)
* added flex wrap capabiliites

* code & styling

* text option complete

* pic adjustments

* Delete private.pem

Unnecessary file.

* Delete public.pem

Unnecessary file.

* git ignore .pem files

* try

* inline code following cms guidelines

* updated git-ignore

* Update .gitignore

* delete puts

* removed whitespace

* remove destroy

* removed comma

--- a/dpc-web/app/assets/stylesheets/settings/_variables.scss
+++ b/dpc-web/app/assets/stylesheets/settings/_variables.scss
@@ -3,6 +3,7 @@ $color-warn-alt: #e27100;
 $color-warn-alt-light: rgba($color-warn-lightest, .9);
 $color-primary-alt-dark: #004972;
 $color-gray-ultra-light: #f6f6f6;
+$color-gray-med: #cbcbcb;
 $color-success-alt-lightest: rgba($color-success-lightest, .9);
 
 // Focus
@@ -17,6 +18,7 @@ $measuer-5:  77ch;
 
 // Breakpoints
 $width-nav: 860px;
+$layout-breakpoint: 965px;
 
 // Replace US WDS font stacks with HealthCare.gov font stacks
 $font-sans: 'Roboto', sans-serif;
