--- a/dpc-web/app/views/public_keys/new.html.erb
+++ b/dpc-web/app/views/public_keys/new.html.erb
@@ -8,7 +8,7 @@
 
   </section>
 
-  <section class="box">
+  <section class="box box--flex">
     <div class="box__content">
       <p class="ds-text--lead">This key will be added for <strong><%= @organization.name %></strong>.</p>
 
@@ -30,6 +30,11 @@
 
         <%= submit_tag "Add key", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
       <% end %>
+    </div>
+    <div class="box__content box--flex">
+      <p class="ds-text--lead">Copy the whole public key including the <code class="ds-u-fill--warn-lightest ds-u-color--primary-darkest">BEGIN PUBLIC KEY</code> and <code class="ds-u-fill--warn-lightest ds-u-color--primary-darkest">END PUBLIC KEY</code> tags before and after.</p>
+      <p><strong>Example:</strong></p>
+      <%= image_tag("public_key.svg", class: "img--outline", alt: "") %>
     </div>
   </section>
 </div>
