DPC-906 Updates to website text (#562)
* Already have access? - added

* ask your software vendors _to_ work with you

* text correction on user edit

* form required congfigured

* more asterisks

* all asterisks complete

* removed old attempt at css class for astrisk styling

--- a/dpc-web/app/assets/stylesheets/components/_fields.scss
+++ b/dpc-web/app/assets/stylesheets/components/_fields.scss
@@ -3,3 +3,17 @@
   margin-left: $spacer-2;
   padding: 0 0 $spacer-1 $spacer-3;
 }
+
+.required {
+  display: flex;
+  flex-wrap: nowrap;
+
+  .ast-inline {
+    color: $color-error-dark;
+  }
+
+  .ast-label {
+    color: $color-error-dark;
+    margin-top: 24px;
+  }
+}
