Refactor RegisteredOrganization logic, Part 1
* Move sandbox email notification to happen if API org creation has been
  successful in RegisteredOrganization model. This doesn’t feel quite
  right but it’s the best place to do it right now.
* Set a RegisteredOrganization’s api_id from the API request *after*
  creation, not before. This simplifies the flow, even though
* Surface API errors to the user if the API org can’t be created. Then
  the user can retry from the edit page
* Make prod API access a feature flag (with an env var) so we can flip
  this on more easily when we’re ready
* Stop using OrganizationRegistrar for api org creation and just make
  API syncing logic that belongs to the RegisteredOrganization model;
  this simplifies things for now
* FhirEndpoint now belongs to RegisteredOrganization and tests/logic is
  up to date for that. We may need a data migration before we remove the
  organization_id column from the fhir_endpoints table
* Do not JSON parse error response from API because it is sometimes not
  JSON
* Add more tests, although some are still pending part 2 of the refactor

--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -122,7 +122,9 @@
           ) %>
         <%= link_to "Disable Sandbox", "#" %>
       <% else %>
-        <%= link_to 'Enable Sandbox', new_internal_organization_registered_organization_path(organization_id: @organization.id, api_env: 'sandbox') %>
+        <%= link_to 'Enable Sandbox',
+                    new_internal_organization_registered_organization_path(organization_id: @organization.id, api_env: 'sandbox'),
+                    data: { test: 'enable-sandbox' } %>
       <% end %>
 
       <h3>Production</h3>
