--- a/dpc-web/app/views/internal/registered_organizations/edit.html.erb
+++ b/dpc-web/app/views/internal/registered_organizations/edit.html.erb
@@ -4,8 +4,8 @@
 
   <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
 
-    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0" data-test="new-org-page">
-      Updates <%= @registered_organization.api_env %> API access for <%= @organization.name %>
+    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0" data-test="edit-reg-org-<%= @registered_organization.api_env %>">
+      Update <%= @registered_organization.api_env %> API access for <%= @organization.name %>
     </h1>
 
   </section>
