WIP Refactor RegisteredOrganization Part 2

--- a/dpc-web/app/views/client_tokens/new.html.erb
+++ b/dpc-web/app/views/client_tokens/new.html.erb
@@ -21,7 +21,7 @@
 
         <div class="field ds-u-margin-y--5">
           <%= label_tag :api_environment, "In what environment will this token be used?", class: "ds-c-label" %>
-          <%= select_tag :api_environment, options_for_select(@organization.api_environment_strings, params[:api_environment]), include_blank: true, class: "ds-c-field" %>
+          <%= select_tag :api_environment, options_for_select(@organization.registered_api_envs, params[:api_environment]), include_blank: true, class: "ds-c-field" %>
         </div>
 
         <%= submit_tag "Create token", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
