--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -21,7 +21,7 @@
 
   <section>
     <div class="ds-u-color--success">
-      <% @organization.api_environment_strings.each do |api_env| %>
+      <% @organization.registered_api_envs.each do |api_env| %>
         <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#database"></use>
         </svg>
