DPC-954: Refactoring of API integration and related web app modeling (#571)
* WIP initial work refactoring registered orgs

* Flesh out views and workflow for registered orgs

* Make a separate page for editing a registered org and its fhir
  endpoint, to simplify showing error messages
* Use a callback to create org in API before the registered org gets
  saved on the Rails side
* Remove not-null contraint for organization_id on fhir_endpoints -
  will remove this column altogether after data cleanup

* delete method and delete test

* Refactor RegisteredOrganization logic, Part 1

* Move sandbox email notification to happen if API org creation has been
  successful in RegisteredOrganization model. This doesn’t feel quite
  right but it’s the best place to do it right now.
* Set a RegisteredOrganization’s api_id from the API request *after*
  creation, not before. This simplifies the flow, even though
* Surface API errors to the user if the API org can’t be created. Then
  the user can retry from the edit page
* Make prod API access a feature flag (with an env var) so we can flip
  this on more easily when we’re ready
* Stop using OrganizationRegistrar for api org creation and just make
  API syncing logic that belongs to the RegisteredOrganization model;
  this simplifies things for now
* FhirEndpoint now belongs to RegisteredOrganization and tests/logic is
  up to date for that. We may need a data migration before we remove the
  organization_id column from the fhir_endpoints table
* Do not JSON parse error response from API because it is sometimes not
  JSON
* Add more tests, although some are still pending part 2 of the refactor

* WIP Refactor RegisteredOrganization Part 2

* Update tests for refactor work

* Add disable API functionality

* Adds link on org page to disable sandbox (or prod) access
* Delete corresponding API organization from API as callback on
  RegisteredOrganization

* Remove no longer needed colu

--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -21,7 +21,7 @@
 
   <section>
     <div class="ds-u-color--success">
-      <% @organization.api_environment_strings.each do |api_env| %>
+      <% @organization.registered_api_envs.each do |api_env| %>
         <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#database"></use>
         </svg>
@@ -94,17 +94,76 @@
 
 <section class="box">
     <div class="box__content">
-      <h2 class="box__heading">FHIR Endpoint</h2>
-      <% @organization.fhir_endpoints.each do |fhir_endpoint| %>
+      <h2 class="box__heading">Enabled Environments</h2>
+
+      <h3>Sandbox</h3>
+      <% if @organization.sandbox_enabled? %>
         <div class="ds-u-margin-bottom--1">
-          Name: <%= fhir_endpoint.name %>
+          API ID: <%= @organization.sandbox_registered_organization.api_id %>
+        </div>
+        <h4>FHIR Endpoint</h4>
+        <div class="ds-u-margin-bottom--1">
+          API Reference: <%= @organization.sandbox_registered_organization.api_endpoint_ref %>
         </div>
         <div class="ds-u-margin-bottom--1">
-          URI: <%= fhir_endpoint.uri %>
+          Name: <%= @organization.sandbox_fhir_endpoint.name %>
         </div>
         <div class="ds-u-margin-bottom--1">
-          Status: <%= fhir_endpoint.status.titleize %>
+          URI: <%= @organization.sandbox_fhir_endpoint.uri %>
         </div>
+        <div class="ds-u-margin-bottom--1">
+          Status: <%= @organization.sandbox_fhir_endpoint.status.titleize %>
+        </div>
+
+        <%= link_to "Edit", edit_internal_organization_registered_organization_path(
+          organization_id: @organization.id,
+          id: @organization.sandbox_registered_organization.id,
+          api_env: 'sandbox'
+          ) %>
+        <%= link_to "Disable Sandbox", internal_organization_registered_organization_path(
+          organization_id: @organization.id,
+          id: @organization.sandbox_registered_organization.id,
+          ), method: :delete, data: { test: 'disable-sandbox' } %>
+      <% else %>
+        <%= link_to 'Enable Sandbox',
+                    new_internal_organization_registered_organization_path(organization_id: @organization.id, api_env: 'sandbox'),
+                    data: { test: 'enable-sandbox' } %>
+      <% end %>
+
+      <h3>Production</h3>
+      <% if production_api_access_enabled? %>
+        <% if @organization.production_enabled? %>
+          <div class="ds-u-margin-bottom--1">
+            API ID: <%= @organization.production_registered_organization.api_id %>
+          </div>
+          <div class="ds-u-margin-bottom--1">
+            API Reference: <%= @organization.production_registered_organization.api_endpoint_ref %>
+          </div>
+          <h4>FHIR Endpoint</h4>
+          <div class="ds-u-margin-bottom--1">
+            Name: <%= @organization.production_fhir_endpoint.name %>
+          </div>
+          <div class="ds-u-margin-bottom--1">
+            URI: <%= @organization.production_fhir_endpoint.uri %>
+          </div>
+          <div class="ds-u-margin-bottom--1">
+            Status: <%= @organization.production_fhir_endpoint.status.titleize %>
+          </div>
+
+          <%= link_to "Edit", edit_internal_organization_registered_organization_path(
+            organization_id: @organization.id,
+            id: @organization.production_registered_organization.id,
+            api_env: 'production'
+            ) %>
+          <%= link_to "Disable Production", internal_organization_registered_organization_path(
+            organization_id: @organization.id,
+            id: @organization.production_registered_organization.id,
+            ), method: :delete, data: { test: 'disable-production' } %>
+        <% else %>
+          <%= link_to 'Enable Production', new_internal_organization_registered_organization_path(organization_id: @organization.id, api_env: 'production') %>
+        <% end %>
+      <% else %>
+        Production API access not yet available.
       <% end %>
     </div>
 </section>
